add app download

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -15,6 +15,9 @@
           <i class="fa fa-weibo"></i>
         </a>
       </li>
+      <li>
+        <iframe src="https://ghbtns.com/github-btn.html?user=jackhutu&repo=jackblog-angular1&type=star&count=true" frameborder="0" scrolling="0" width="160px" height="20px"></iframe>
+      </li>
     </ul>
   </div>
 
