--- a/src/app/settings/local_sign_in.html
+++ b/src/app/settings/local_sign_in.html
@@ -36,17 +36,7 @@
 
 				<div class="login-sns">
 			      <p>您还可以通过以下方式直接登录</p>
-			      <ul>
-				      <li ng-click="loginOauth('github')">
-				        <a class="github" href="javascript:;"><i class="fa fa-github"></i></a>
-				      </li>
-			        <li ng-click="loginOauth('weibo')">
-			          <a class="weibo" href="javascript:;"><i class="fa fa-weibo"></i></a>
-			        </li>
-			        <li ng-click="loginOauth('qq')">
-			          <a class="qq" href="javascript:;"><i class="fa fa-qq"></i></a>
-			        </li>
-			      </ul>
+			      <snsloginbtns />
 			  </div>
 		</div>
 
