--- a/src/app/settings/sns_sign_in.html
+++ b/src/app/settings/sns_sign_in.html
@@ -4,17 +4,7 @@
 <div class="modal-body">
     <div class="portlet-body">
           <div class="login-sns">
-            <ul>
-            <li ng-click="loginOauth('github')">
-              <a class="github" href="javascript:;"><i class="fa fa-github"></i></a>
-            </li>  
-             <li ng-click="loginOauth('weibo')">
-                <a class="weibo" href="javascript:;"><i class="fa fa-weibo"></i></a>
-              </li>
-              <li ng-click="loginOauth('qq')">
-                <a class="qq" href="javascript:;"><i class="fa fa-qq"></i></a>
-              </li>
-            </ul>
+            <snsloginbtns />
           </div>
     </div>
 </div>
