--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -20,5 +20,6 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
 @import "components.scss";
 @import "article/article.scss";
 @import "main/main.scss";
+@import "mobile/mobile.scss";
 @import "settings/settings.scss";
 // endinjector
