--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -9,6 +9,9 @@
   </div>
   <div class="navbar-expanded">
       <div>
+      <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue">
+        <img src='http://upload.jackhu.top/icons/vue.png-32x32' /> 
+      </a>
         <a class="navbar-item expanded-version" href="http://redux.jackhu.top" title="React">
           <img src='http://upload.jackhu.top/icons/react.png-32x32' /> 
         </a>
@@ -64,6 +67,21 @@
       <a class="navbar-item change-mode" href="javascript:;" ng-click="changeMode()">
         <i ng-if="dayMode" class="fa fa-moon-o"></i>
         <i ng-if="!dayMode" class="fa fa-sun-o"></i>
+      </a>
+    </div>
+    <div class="pull-right">
+      <a class="navbar-item expanded-version" href="http://angular1.jackhu.top" title="Angular1.x">
+        <img src='http://upload.jackhu.top/icons/AngularJS.png-16x16' /> 
+      </a>
+    </div>
+    <div class="pull-right">
+      <a class="navbar-item expanded-version" href="http://redux.jackhu.top" title="React">
+        <img src='http://upload.jackhu.top/icons/react.png-16x16' /> 
+      </a>
+    </div>
+    <div class="pull-right">
+      <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue">
+        <img src='http://upload.jackhu.top/icons/vue.png-16x16' /> 
       </a>
     </div>
 
