--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -9,9 +9,12 @@
   </div>
   <div class="navbar-expanded">
       <div>
-      <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue">
-        <img src='http://upload.jackhu.top/icons/vue.png-32x32' /> 
-      </a>
+        <a class="navbar-item expanded-version" href="http://angular2.jackhu.top" title="Angular2.x">
+          <img src='http://upload.jackhu.top/icons/angular2.png-32x32' /> 
+        </a>
+        <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue">
+          <img src='http://upload.jackhu.top/icons/vue.png-32x32' /> 
+        </a>
         <a class="navbar-item expanded-version" href="http://redux.jackhu.top" title="React">
           <img src='http://upload.jackhu.top/icons/react.png-32x32' /> 
         </a>
@@ -88,6 +91,10 @@
         <img src='http://upload.jackhu.top/icons/vue.png-16x16' /> 
       </a>
     </div>
-
+    <div class="pull-right">
+      <a class="navbar-item expanded-version" href="http://angular2.jackhu.top" title="Agnular2.x">
+        <img src='http://upload.jackhu.top/icons/angular2.png-16x16' /> 
+      </a>
+    </div>
   </div>
 </div>
