modify navbar style

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -3,22 +3,22 @@
       <a class="navbar-item logo" ng-class="{active: isActive('/')}" title="首页" href="/">
         Hu
       </a>
-      <a class="navbar-item mobile hidden-xs" ng-class="{active: isActive('/apps')}" tooltip-class="nav-tooltip" tooltip-placement="right" tooltip="移动应用" href="/apps">
+      <a class="navbar-item mobile" ng-class="{active: isActive('/apps')}" tooltip-class="nav-tooltip" tooltip-placement="right" tooltip="移动应用" href="/apps">
         <i class="fa fa-mobile"></i>
       </a>  
   </div>
   <div class="navbar-expanded">
       <div>
-        <a class="navbar-item expanded-version" href="http://angular2.jackhu.top" title="Angular2.x">
+        <a class="navbar-item expanded-version" href="http://angular2.jackhu.top" title="Angular2.x版">
           <img src='http://upload.jackhu.top/icons/angular2.png-32x32' /> 
         </a>
-        <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue">
+        <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue版">
           <img src='http://upload.jackhu.top/icons/vue.png-32x32' /> 
         </a>
-        <a class="navbar-item expanded-version" href="http://redux.jackhu.top" title="React">
+        <a class="navbar-item expanded-version" href="http://react.jackhu.top" title="React版">
           <img src='http://upload.jackhu.top/icons/react.png-32x32' /> 
         </a>
-        <a class="navbar-item expanded-version" href="http://angular1.jackhu.top" title="Angular1.x">
+        <a class="navbar-item expanded-version" href="http://angular1.jackhu.top" title="Angular1.x版">
           <img src='http://upload.jackhu.top/icons/AngularJS.png-32x32' /> 
         </a>
         <a class="navbar-item change-mode" href="javascript:;" ng-click="changeMode()" tooltip-placement="right" tooltip-class="nav-tooltip" tooltip="模式切换">
@@ -77,22 +77,22 @@
       </a>
     </div>
     <div class="pull-right">
-      <a class="navbar-item expanded-version" href="http://angular1.jackhu.top" title="Angular1.x">
+      <a class="navbar-item expanded-version" href="http://angular1.jackhu.top" title="Angular1.x版">
         <img src='http://upload.jackhu.top/icons/AngularJS.png-16x16' /> 
       </a>
     </div>
     <div class="pull-right">
-      <a class="navbar-item expanded-version" href="http://redux.jackhu.top" title="React">
+      <a class="navbar-item expanded-version" href="http://react.jackhu.top" title="React版">
         <img src='http://upload.jackhu.top/icons/react.png-16x16' /> 
       </a>
     </div>
     <div class="pull-right">
-      <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue">
+      <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue版">
         <img src='http://upload.jackhu.top/icons/vue.png-16x16' /> 
       </a>
     </div>
     <div class="pull-right">
-      <a class="navbar-item expanded-version" href="http://angular2.jackhu.top" title="Agnular2.x">
+      <a class="navbar-item expanded-version" href="http://angular2.jackhu.top" title="Agnular2.x版">
         <img src='http://upload.jackhu.top/icons/angular2.png-16x16' /> 
       </a>
     </div>
