--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -9,17 +9,17 @@
   </div>
   <div class="navbar-expanded">
       <div>
-        <a class="navbar-item expanded-version" href="http://angular2.jackhu.top" title="Angular2.x版">
-          <img src='http://upload.jackhu.top/icons/angular2.png-32x32' /> 
+        <a class="navbar-item expanded-version" href="//angular2.jackhu.top" title="Angular2.x版">
+          <img src='//upload.jackhu.top/icons/angular2.png-32x32' /> 
         </a>
-        <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue版">
-          <img src='http://upload.jackhu.top/icons/vue.png-32x32' /> 
+        <a class="navbar-item expanded-version" href="//vue.jackhu.top" title="Vue版">
+          <img src='//upload.jackhu.top/icons/vue.png-32x32' /> 
         </a>
-        <a class="navbar-item expanded-version" href="http://react.jackhu.top" title="React版">
-          <img src='http://upload.jackhu.top/icons/react.png-32x32' /> 
+        <a class="navbar-item expanded-version" href="//react.jackhu.top" title="React版">
+          <img src='//upload.jackhu.top/icons/react.png-32x32' /> 
         </a>
-        <a class="navbar-item expanded-version" href="http://angular1.jackhu.top" title="Angular1.x版">
-          <img src='http://upload.jackhu.top/icons/AngularJS.png-32x32' /> 
+        <a class="navbar-item expanded-version" href="//angular.jackhu.top" title="Angular1.x版">
+          <img src='//upload.jackhu.top/icons/AngularJS.png-32x32' /> 
         </a>
         <a class="navbar-item change-mode" href="javascript:;" ng-click="changeMode()" tooltip-placement="right" tooltip-class="nav-tooltip" tooltip="模式切换">
           <i ng-if="dayMode" class="fa fa-moon-o"></i>
@@ -77,23 +77,23 @@
       </a>
     </div>
     <div class="pull-right">
-      <a class="navbar-item expanded-version" href="http://angular1.jackhu.top" title="Angular1.x版">
-        <img src='http://upload.jackhu.top/icons/AngularJS.png-16x16' /> 
+      <a class="navbar-item expanded-version" href="//angular1.jackhu.top" title="Angular1.x版">
+        <img src='//upload.jackhu.top/icons/AngularJS.png-16x16' /> 
       </a>
     </div>
     <div class="pull-right">
-      <a class="navbar-item expanded-version" href="http://react.jackhu.top" title="React版">
-        <img src='http://upload.jackhu.top/icons/react.png-16x16' /> 
+      <a class="navbar-item expanded-version" href="//react.jackhu.top" title="React版">
+        <img src='//upload.jackhu.top/icons/react.png-16x16' /> 
       </a>
     </div>
     <div class="pull-right">
-      <a class="navbar-item expanded-version" href="http://vue.jackhu.top" title="Vue版">
-        <img src='http://upload.jackhu.top/icons/vue.png-16x16' /> 
+      <a class="navbar-item expanded-version" href="//vue.jackhu.top" title="Vue版">
+        <img src='//upload.jackhu.top/icons/vue.png-16x16' /> 
       </a>
     </div>
     <div class="pull-right">
-      <a class="navbar-item expanded-version" href="http://angular2.jackhu.top" title="Agnular2.x版">
-        <img src='http://upload.jackhu.top/icons/angular2.png-16x16' /> 
+      <a class="navbar-item expanded-version" href="//angular2.jackhu.top" title="Agnular2.x版">
+        <img src='//upload.jackhu.top/icons/angular2.png-16x16' /> 
       </a>
     </div>
   </div>
